--- a/hslab.cabal
+++ b/hslab.cabal
@@ -49,7 +49,8 @@ executable robominer
     random,
     MonadRandom,
     ansi-terminal,
-    multimap
+    multimap,
+    multiset
 --    containers,
 --    text
 
